feat: backend architecture, DEX oracle, market creation, trading UI, server package
* feat: port DEX oracle, market creation wizard, and improved components from MidTermDev

Core library:
- Add dex-oracle.ts: PumpSwap, Raydium CLMM, Meteora DLMM pool parsing & spot price
- Add DEX program IDs and Pyth Push Oracle PDA derivation to pda.ts
- Export dex-oracle from core index

App lib:
- Expand format.ts: formatPnl, formatSlotAge, formatI128Amount, formatMarginPct, formatPriceE6
- Add parseAmount.ts: parseHumanAmount/formatHumanAmount for decimal input
- Add tokenMeta.ts: on-chain + Jupiter token metadata with caching
- Update tx.ts: support additional signers (needed for market creation)

New hooks:
- useCreateMarket: 6-step market creation with retry support
- useDexPoolSearch: DexScreener pool discovery for any token
- usePythFeedSearch: Pyth Hermes feed search with debounce
- useTokenMeta/useMultiTokenMeta: token metadata hooks
- useMarketAddress: URL query param market address

New components:
- CreateMarketWizard: full step-by-step market creation UI
- AccountsCard: sortable accounts table with tabs, leaderboard, liq health bars
- DepositWithdrawCard: improved deposit/withdraw with token meta
- EngineHealthCard: engine internals dashboard
- MarketBookCard: order book view with LP depth
- OrderConfirm: trade confirmation modal
- MarketBrowser: market listing with health badges and token metadata
- Improved TradeForm: margin validation, open position detection
- Improved PositionPanel: close position, live price PnL, margin health
- MarketProvider: Suspense-wrapped dynamic market address provider

Scripts:
- create-market.ts: CLI market creation
- crank-generic.ts: generic crank bot

Rust program:
- Copy MidTermDev percolator-prog as program/ (DEX oracle support)

All existing features preserved: on-chain discovery, health badges, live Jupiter
price, multi-instruction tx, Supabase integration, network toggle.

* feat: add percolator risk engine crate (program depen

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "tsup",
-    "test": "tsx test/abi.test.ts && tsx test/pda.test.ts && tsx test/slab.test.ts && tsx test/validation.test.ts"
+    "test": "tsx test/abi.test.ts && tsx test/pda.test.ts && tsx test/slab.test.ts && tsx test/validation.test.ts && tsx test/dex-oracle.test.ts"
   },
   "dependencies": {
     "@solana/spl-token": "^0.3.11",
