feat: token logo upload (clean rewrite of #195)
* feat: token logo upload — clean rewrite from PR #195

- Logo upload API: POST /api/markets/[slab]/logo (Supabase Storage)
- MarketLogo component with fallback to letter avatar
- Rate limiting (1 upload per 30s per market)
- No SVG uploads (XSS vector)
- Max 2MB file size
- Migration 014: add logo_url column to markets
- Updated database types

What was removed from original PR:
- 9 unnecessary .md files (3,504 lines)
- Private key input page (security risk)
- Token metadata updater page
- Metaplex integration (unnecessary complexity)
- test-logo-upload.sh

NOTE: Run migration 014 in Supabase SQL editor before using.

* fix: simplify migration 014 — column only, no view recreate

---------

Co-authored-by: Cobra <cobra@drivora.com>

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@solana/spl-token": "^0.3.11",
-    "@solana/web3.js": "^1.98.4"
+    "@solana/web3.js": "^1.98.4",
+    "pg": "^8.18.0"
   }
 }
