--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
     "@solana/spl-token": "^0.3.11",
     "@solana/web3.js": "^1.98.4",
     "pg": "^8.18.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "axios": ">=1.13.5",
+      "lodash": ">=4.17.21"
+    }
   }
 }
