security: remediate dependency vulnerabilities (PERC-038)
Remove unused @solana/wallet-adapter-wallets — eliminates elliptic (risky
crypto) and lodash (prototype pollution) vulnerability chains. The
WalletProvider uses wallet-standard auto-detection with an empty wallets
array; this package was never imported.

Override minimatch to >=10.0.0 via pnpm.overrides — fixes ReDoS in eslint
transitive dep chain (3 paths). Linting verified to still work.

Add SECURITY-DEPS.md risk register documenting:
- All remediation actions taken
- Risk acceptance for bigint-buffer (no patch exists, low effective risk)
- Risk acceptance for ajv ReDoS (dev-only, no production impact)

Reduces pnpm audit findings from 7 to 2 (both risk-accepted).

Resolves: PERC-038

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   "pnpm": {
     "overrides": {
       "axios": ">=1.13.5",
-      "lodash": ">=4.17.21"
+      "lodash": ">=4.17.21",
+      "minimatch": ">=10.0.0"
     }
   }
 }
