fix(#259): patch dependency vulnerabilities — bn.js and ajv (#323)
- Upgrade bn.js from ^5.2.2 to ^5.2.3 (fixes infinite loop CVE)
- Add pnpm overrides for bn.js>=5.2.3 and ajv>=6.14.0
- Reduces audit findings from 3 to 1 (remaining: bigint-buffer — no patch available, Solana ecosystem transitive dep)

Addresses #259

Co-authored-by: dcccrypto <dcccrypto@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   },
   "pnpm": {
     "overrides": {
+      "ajv": ">=6.14.0",
       "axios": ">=1.13.5",
+      "bn.js": ">=5.2.3",
       "lodash": ">=4.17.21",
       "minimatch": ">=10.0.0"
     }
